--- a/css/main_work.css
+++ b/css/main_work.css
@@ -168,7 +168,7 @@ img.nav-item {
 
 .text-box{
     color: white;
-    width: 90%;
+    width: 96%;
     padding: 1rem;
     text-align: center;
     margin-top: 2rem;
@@ -530,6 +530,10 @@ footer{
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 2rem;
 }
+
+.other-project{
+    align-items: start;
+}
 nav{
     justify-content: space-around;
 }
@@ -537,10 +541,6 @@ nav{
 .nav-grid-master {
     justify-items: start;
     grid-template-columns: 4fr 1fr;
-}
-
-.other-project{
-    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .nav-grid-text {
@@ -619,7 +619,6 @@ nav{
         font-size: 2rem;
         margin-bottom: 0;
     }
-
     
     .featured-project, .project-banner {
         grid-template-columns: 1fr;
@@ -641,11 +640,20 @@ nav{
 
     .text-box{
         font-size: .9rem;
+        max-width: 59rem;
     }
 
     .project-card-2c{
         grid-template-columns: 1fr;
         grid-row-gap: 0;
+    }
+
+    .first-other, .second-other, .third-other{
+        border-radius: 2rem;
+        background-color: #212121;
+        padding: 1.25rem 1rem 1.8rem 1rem;
+        justify-items: center;
+        font-size: .9rem;
     }
 
     .project-card-2c .project-details{
@@ -666,7 +674,7 @@ nav{
         font-size: .8rem;
     }
 
-    .project-details h3{
+    .project-details h3, .other-project h3{
         font-size: 1.2rem;
     }
 
@@ -705,7 +713,22 @@ nav{
         line-height: 1.6rem;
         font-size: .87rem;
     }
-    
+    .other-project{
+        grid-template-columns: 1fr;
+        text-align: center;
+        color: white;
+    }
+
+    .other-project figure{
+        margin: 0;
+    }
+
+    .other-project p h3{
+        font-size: .9rem;
+        max-width: 10rem;
+        /* margin: 0; */
+    }
+
 }
 
 /* 600px */
@@ -716,7 +739,7 @@ nav{
         font-size: .9rem;
     }
 
-    .project-details h3{
+    .project-details h3, .other-project h3{
         font-size: 1.5rem;
     }
 
@@ -738,6 +761,9 @@ nav{
 
     .label-button{
         font-size: 1rem;
+    }
+    .text-box{
+        max-width: 40rem;
     }
 }
 
@@ -784,7 +810,6 @@ nav{
 
     .featured-project .project-details{
         text-align: center;
-        /* padding-left: 6.5rem; */
     }
 
     #second-project .project-details{
@@ -870,6 +895,7 @@ nav{
     }
 
     .text-box{
+        max-width: 80rem;
         font-size: 1rem;
     }
 
@@ -886,6 +912,7 @@ nav{
         text-align:start;
         padding-left: 0rem;
     }
+
 
     .project-banner .project-details{
         padding-left: 4rem;
@@ -930,4 +957,7 @@ nav{
         grid-template-columns: 1fr 1fr;
     }
 
+    .other-project{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
