--- a/css/main_work.css
+++ b/css/main_work.css
@@ -235,26 +235,31 @@ body {
 }
 
 #first-project{
-    background-color: #BC4B4B;
+    background-color: #BB5036;
     border-radius: 2rem;
     margin-bottom: 2rem;
 }
 
 #second-project{
-    font-family: 'Noto Sans JP', sans-serif;
-    background-color: #002649;
+    background-color: #371d5f;
     border-radius: 2rem;
     margin-bottom: 2rem;
 }
 
 #third-project{
-    background-color: #371d5f;
+    background-color: #005f46;
     border-radius: 2rem;
     margin-bottom: 2rem;
 }
 
 #fourth-project {
     background-color: #BC4B4B;
+    border-radius: 2rem;
+    margin-bottom: 2rem;
+}
+
+#fifth-project{
+    background-color: #b44f42;
     border-radius: 2rem;
     margin-bottom: 2rem;
 }
@@ -551,7 +556,7 @@ nav{
     grid-template-columns: 1fr 1fr;
 }
 
-#second-project, .project-card-2c{
+#fifth-project, .project-card-2c{
     justify-items: center;
 }
 
@@ -742,6 +747,10 @@ nav{
         display: none;
     }
 
+    .static-img img{
+        display: block;
+    }
+
     #ren-ayumi img, #color-theme img, #sketch-img img, #award img, .single-img{
         display: block;
     }
@@ -776,7 +785,7 @@ nav{
         text-align: center;
     }
 
-    #second-project .project-details{
+    #fifth-project .project-details{
         padding: 0;
     }
 
@@ -797,13 +806,13 @@ nav{
         max-width: 26rem;
     }       
 
-    #third-project .project-details {
+    #second-project .project-details {
         margin-left: 7rem;
         margin-right: 7rem;
         padding-left: 0;
     }
 
-    #third-project .project-description{
+    #second-project .project-description{
         max-width: 18rem;
         margin-left: 4rem;
     }
@@ -894,17 +903,17 @@ nav{
         padding: 6rem;
     }
 
-    #third-project p{
+    #second-project p{
         max-width: 26rem;
     }
 
-    #third-project .project-details {
+    #second-project .project-details {
         margin-left: 0;
         margin-right: 8rem;
         padding-left: 4rem;
     }
 
-    #third-project .project-description{
+    #second-project .project-description{
         margin-left: 0;
     }
 
