New project file and added text to Fureverhome
Added new file for 88rising project, added text to Fureverhome, changes to about page and fixes for Splitwise project prototype having responsive issue on mobile

--- a/css/main_work.css
+++ b/css/main_work.css
@@ -294,6 +294,10 @@ body {
     height: 100%;
 }
 
+#interactive-prototype iframe{
+    width: 100%;
+    height: 450px;
+}
 .project-details{
     max-width: 50rem;
     margin: 1rem 3rem 2rem 1rem;
