--- a/css/main_work.css
+++ b/css/main_work.css
@@ -8,6 +8,116 @@ html {
     scroll-behavior: smooth;
 }
 
+/* font stuff */
+.fira-sans-thin {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+  }
+  
+  .fira-sans-thin-italic {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+  }
+  
+  .fira-sans-extralight {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+  }
+  
+  .fira-sans-extralight-italic {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 200;
+    font-style: italic;
+  }
+  
+  .fira-sans-light {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
+  .fira-sans-light-italic {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+  }
+  
+  .fira-sans-regular {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .fira-sans-regular-italic {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .fira-sans-medium {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+  .fira-sans-medium-italic {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 500;
+    font-style: italic;
+  }
+  
+  .fira-sans-semibold {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+  }
+  
+  .fira-sans-semibold-italic {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 600;
+    font-style: italic;
+  }
+  
+  .fira-sans-bold {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .fira-sans-bold-italic {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+  }
+  
+  .fira-sans-extrabold {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+  }
+  
+  .fira-sans-extrabold-italic {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 800;
+    font-style: italic;
+  }
+  
+  .fira-sans-black {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+  
+  .fira-sans-black-italic {
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+  }
+
+  /* general html */
 img{
     width: 100%;
     height: 100%;
@@ -335,7 +445,6 @@ footer{
 }
 
 .project-analysis .in-text-link, .about-bio .in-text-link{
-    /* color: #108b8f; */
     color: #ECB365;
     transition: .6s all ease-in-out;
 }
@@ -370,10 +479,6 @@ footer{
 
 /* Project Analysis */
 
-.project-analysis{
-    color: white;
-}
-
 .project-banner .project-details{
     margin: auto;
 }
@@ -389,22 +494,44 @@ footer{
 }
 
 .project-analysis{
+    color: white;
     max-width: 50rem;
     margin-left: auto;
     margin-right: auto;
 }
 
+.project-analysis p, .project-description{
+    line-height: 1.6rem;
+}
+
+
 .project-analysis h2{
     text-align: start;
     font-family: 'Fira Sans', sans-serif;
-    font-size: 2.75rem;
+    font-weight: 800;
+    font-size: 2.5rem;
     margin-top: 2rem;
     margin-bottom: 2rem;
     color: #ECB365;
 }
 
 .project-analysis h3{
-    font-size: 1.25rem;
+    font-weight: 500;
+    font-size: 1.15rem;
+    color:#db9f4a;
+}
+
+.project-analysis h4{
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 1.4rem;
+    font-weight: 400;
+    margin-bottom: .75rem;
+}
+
+.project-quotes p{
+    margin-top: 0.25rem;
+    padding-top: 0;
+    font-weight: 300;
 }
 
 .project-banner{
@@ -533,6 +660,11 @@ footer{
 
 nav{
     justify-content: space-around;
+}
+
+span{
+    color:#ECB365;
+    font-weight: bold;
 }
 
 .nav-grid-master {
