--- a/css/main_work.css
+++ b/css/main_work.css
@@ -581,13 +581,12 @@ footer{
 }
 
 .project-roles{
-    max-width: 30rem;
-    text-align: center;
+    max-width: 33rem;
     font-size: .9rem;
 }
 
 .role-details{
-    margin:.5rem;
+    margin: 0.5rem 0.5rem .5rem 0rem;
 }
 
 .project-roles ul{
@@ -667,7 +666,7 @@ footer{
 .project-roles{
     align-items: normal;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 2rem;
+    grid-column-gap: 1rem;
 }
 
 nav{
@@ -1041,7 +1040,7 @@ span{
     }
 
     .project-description{
-        max-width: 30rem;
+        max-width: 28rem;
     }       
 
     .main-banner{
