--- a/css/main_work.css
+++ b/css/main_work.css
@@ -222,9 +222,9 @@ img.nav-item {
 	animation-name: clip-text;
 	color: #FFF;
     margin-top: 0;
-	/* white-space: nowrap; */
 	cursor: default;
 }
+
 .reveal-text::after{
     content: "";
     position: absolute;
@@ -274,13 +274,11 @@ img.nav-item {
 /* ------------------------------------ */
 
 .main-banner{
-    /* color: white; */
     background-color: #161616;
     padding:  7rem;
 }
 
 .main-banner h1{
-    font-size: 8rem;
     margin-top: 5rem;
     margin-bottom: 5rem;
     font-size: 6rem;
@@ -302,18 +300,41 @@ img.nav-item {
     border-radius: .5rem;
     max-width: 80rem;
 }
+/* main banner random img section */
+#banner-text{
+    text-decoration: underline ;
+}
+
+#img-container{
+    display: none;
+}
+
+.random-imgs{
+    position:relative;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.random-imgs img, .random-imgs video{
+    position: absolute;
+    border-radius: 1rem;
+    max-width: 13rem;
+    height: auto;
+    transition: all 0.3s ease;
+    transform: translate(var(--x-position), var(--y-position)) scale(0.75);
+}
 
 body {
   margin: 0;
 }
 
-.main-banner video {
+.main-banner video, .random-imgs-video {
     object-fit: cover;
     width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
 }
+
 
 .h2-sub{
     font-family: 'Noto Sans', sans-serif;
@@ -547,6 +568,10 @@ footer{
 .project-quotes h5{
     font-size: 1.1rem;
     font-weight: 400;
+}
+
+.stakeholder-value{
+    align-items: start !important;
 }
 
 .project-banner{
@@ -1049,7 +1074,7 @@ span{
     }       
 
     .main-banner{
-        padding: 6rem;
+        padding: 11rem;
     }
 
     #second-project p{
