--- a/css/main_work.css
+++ b/css/main_work.css
@@ -22,33 +22,39 @@ body {
 } 
 
 h1{
-    font-weight: 500;
+    font-weight: 600;
     font-family: 'Quicksand', sans-serif;
+    color: #242424;
 }
 
 h2{
     font-family: 'Quicksand', sans-serif;
+    color: #242424;
 }
 
 h3{
     font-family: 'Quicksand', sans-serif;
+    color: #242424;
 }
   
 h4{
     font-family: 'Quicksand', sans-serif;
+    color: #242424;
 }
 
 h5{
     font-family: 'Mulish', sans-serif;
+    color: #242424;
 }
 
 p, ul, ol, a, figcaption{
     font-family: 'Mulish', sans-serif;
+    color: #242424;
 }
 
 main {
     margin: 1rem;
-    padding: 1rem;  
+    padding: 1rem 3rem 1rem 3rem;  
 }
 
 
@@ -192,7 +198,7 @@ img.nav-item {
 }
 
 .text-box{
-    color: white;
+    color: #F5F8FD;
     width: 96%;
     padding: 1rem;
     text-align: center;
@@ -214,7 +220,7 @@ img.nav-item {
 body {
   margin: 0;
   color: #242424;
-  background-color: #f8f8f8;
+  background-color: #F5F8FD;
 }
 
 .main-banner video, .random-imgs-video {
@@ -225,22 +231,21 @@ body {
 }
 
 
-.h2-sub{
-    font-style: italic;
-    text-align: center;
-    color: #ECB365;
+#arrow-down{
+    font-size: 1.5rem;
+    color: #41797C;
     margin-top: 0rem;
 }
 
 .separating-line{
-    border-bottom: 1.25px solid #41797C;
+    border-bottom: 0.1rem solid #41797C;
 }
 
 /* Project items */
 
 .featured-project{
     padding: 2rem;
-    color: #000000;
+    color: #242424;
     border-radius: 2rem;
     transition: transform 0.5s, opacity 0.5s;
 }
@@ -318,33 +323,47 @@ body {
     text-align: end;
 }
 
+#bottom-nav{
+    padding-top: 4rem;
+}
+
+#bottom-nav-right{
+    margin-left: auto; 
+    margin-right: 0;
+}
+
 /* Footer styling */
 
 footer{
-    color: white;
-    background-color:#161616;
+    color: #242424;
+    background-color:#F5F8FD;
     padding: 3rem 4rem;
-    border-top: 0.1rem #323131 solid;
 }
 
-.footer-head{
-    font-size: 1.3rem;
-    font-weight: bold;
-    color:#ECB365;
+.footer-msg{
+    max-width: 20rem;
 }
 
 .in-text-link{
-    color: rgb(36, 36, 36);
+    color: #242424;
     transition: .6s all ease-in-out;
     border-radius: .2rem;
 }
 
+.footer-link{
+    color: #242424;
+    transition: .6s all ease-in-out;
+    padding: .25rem;
+    border-radius: .2rem;
+    text-decoration: none;
+    font-weight: bold;
+}
 .project-analysis .in-text-link, .about-bio .in-text-link{
     color: #ECB365;
     transition: .6s all ease-in-out;
 }
 
-.in-text-link:hover, .in-text-link:focus{
+.in-text-link:hover, .in-text-link:focus, .footer-link:hover, .footer-link:focus{
     color: #041C32;
     box-shadow: inset 25rem 0 0 0 #ECB365;
     text-decoration: none;
@@ -388,64 +407,95 @@ footer{
 }
 
 .project-analysis{
-    color: white;
-    max-width: 50rem;
-    margin-left: auto;
+    color: #242424;
+    margin-left: 2rem;
     margin-right: auto;
+    padding-top: 5rem;
+}
+
+.text-container{
+    max-width: 45rem;
+}
+
+.right-align-container{
+    position: relative;
+    left: 55%;
+    max-width: 44rem;
+    z-index: 2;
+}
+
+.research{
+    padding-top: 5rem;
+}
+
+#graph88r{
+    margin-top: -5rem;
 }
 
 .project-analysis p, .project-description{
-    line-height: 1.6rem;
+    line-height: 1.5rem;
 }
 
 .project-analysis p{
-    margin: 2rem 0 2rem 0;
+    margin: 1.5rem 0 1.5rem 0;
+    font-size: .95rem;
 }
 
+.responsive-img{
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
 
 .project-analysis h2{
     text-align: start;
     font-weight: 800;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     margin-top: 2rem;
     margin-bottom: 2rem;
-    color: #ECB365;
+    color: #242424;
 }
 
 .project-analysis h3{
     font-weight: 500;
     font-size: 1.15rem;
-    color:#db9f4a;
 }
 
 .project-analysis h4{
     font-size: 1.4rem;
-    font-weight: 400;
+    font-weight: 500;
     margin-bottom: .75rem;
 }
 
 .project-quotes{
-    padding: 1.5rem;
+    margin-left: 1rem; 
+    padding: 1.5rem 0rem 1.5rem 4rem;
+    border-left: #41797C .1rem solid;
+    max-width: 50rem;
 }
 
 .project-quotes p{
-    margin-top: 0.25rem;
+    margin-top: 0rem;
+    margin-bottom: 1.6rem;
     padding-top: 0;
     font-weight: 300;
 }
 
+.project-quotes h4{
+    margin-top: 0.25rem;
+    padding-top: 0;
+    font-weight: 400;
+    font-size: 1.3rem;
+}
+
 .project-quotes h5{
     font-size: 1.1rem;
+    line-height: 1.6rem;
     font-weight: 400;
 }
 
-.stakeholder-value{
+.align-top{
     align-items: start !important;
-}
-
-.project-banner{
-    color: white;
-    padding: 4rem 4rem 2rem 4rem;
 }
 
 .project-banner .project-description{
@@ -475,17 +525,18 @@ footer{
     font-weight: 600;
 }
 
-.project-roles{
-    max-width: 33rem;
+.project-roles p{
     font-size: .9rem;
+    margin-top: .5rem;
+}
+
+.project-roles h3{
+    font-size: 1.1rem;
+    margin-bottom: .9rem;
 }
 
 .role-details{
     margin: 0.5rem 0.5rem .5rem 0rem;
-}
-
-.project-roles ul{
-    list-style: none;
 }
 
 .figure-analysis{
@@ -560,7 +611,9 @@ footer{
 .project-roles{
     align-items: normal;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 1rem;
+    grid-column-gap: 2rem;
+    max-width: 60rem;
+    margin: auto;
 }
 
 nav{
@@ -568,8 +621,7 @@ nav{
 }
 
 span{
-    color:#ECB365;
-    font-weight: bold;
+    font-weight: 700;
 }
 
 .nav-grid-master {
@@ -584,18 +636,13 @@ span{
 
 .project-card-2c{
     grid-template-columns: 1fr 1fr;
-    max-width: 50rem;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
 }
 
 .about-me-2c{
     justify-items: center;
     grid-template-columns: 1fr 1fr;
-}
-
-#fifth-project, .project-card-2c{
-    justify-items: center;
 }
 
 @media (min-width: 0rem){
@@ -623,8 +670,11 @@ span{
         text-decoration: underline;
     }
 
-    .project-banner{
-        padding: 1rem 4rem 1rem 4rem;
+    .project-banner img{
+        padding: 0;
+        margin: 0;
+        object-fit: cover;
+        max-width: 100%;
     }
 
     .featured-project .project-description{
@@ -706,11 +756,6 @@ span{
 
     .label-button{
         font-size: .8rem;
-    }
-
-    /* re-ordering items in css grids from: https://tomduffytech.com/grid-order/ */
-    .project-item:nth-of-type(1){
-        order: 1;
     }
 
     .featured-project{
@@ -816,20 +861,16 @@ span{
         position: fixed;
     }
     
-    .project-banner{
-        padding: 4rem 4rem 2rem 4rem;
+    .project-banner img{
+        max-height: 43rem;
     }
 
-    .featured-project, .project-banner {
+    .featured-project {
         grid-template-columns: 1fr;
     }
 
     .featured-project .project-details{
         text-align: center;
-    }
-
-    #fifth-project .project-details{
-        padding: 0;
     }
 
     .project-banner .project-details{
@@ -848,31 +889,16 @@ span{
     .project-description{
         max-width: 26rem;
     }       
-
-    #second-project .project-details {
-        margin-left: 7rem;
-        margin-right: 7rem;
-        padding-left: 0;
-    }
-
-    #second-project .project-description{
-        max-width: 18rem;
-        margin-left: 4rem;
-    }
-
     .project-quotes{
         font-size: 1.4rem;
     }
 
     .project-quotes p{
-        font-size: 1.1rem;
+        font-size: .8rem;
     }
 
     .project-card-2c{
         grid-template-columns: 1fr 1fr;
-        max-width: 50rem;
-        margin-left: auto;
-        margin-right: auto;
         grid-column-gap: 1.5rem;
     }
 
@@ -928,7 +954,7 @@ span{
         order: 0;
     }
 
-    .featured-project, .project-banner {
+    .featured-project {
         grid-template-columns: 2fr 2fr;
         justify-items: center;
     }    
@@ -938,6 +964,14 @@ span{
         padding-left: 0rem;
     }
 
+    .project-header{
+        padding: 2rem 6rem 0rem 6rem;
+        margin: auto;
+    }
+
+    .project-header h1{
+        max-width: 45rem;
+    }
 
     .project-banner .project-details{
         padding-left: 4rem;
@@ -948,7 +982,7 @@ span{
     }
 
     .project-description{
-        max-width: 30rem;
+        max-width: 28rem;
     }       
 
     #second-project p{
