--- a/css/main_work.css
+++ b/css/main_work.css
@@ -193,23 +193,14 @@ img.nav-item {
 .main-banner h4{
     margin-top: 10rem;
 }
+
 #hero-video video{
     object-fit: contain;
 }
 
-.text-box{
-    color: #F5F8FD;
-    width: 96%;
-    padding: 1rem;
-    text-align: center;
-    margin-top: 2rem;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 2rem;
-    background-color: #108b8f;
-    padding: 1.5rem 1.5rem;
-    border-radius: .5rem;
-    max-width: 80rem;
+#hero-text{
+    position: relative;
+    bottom: -5rem
 }
 
 #banner-text{
@@ -359,7 +350,7 @@ footer{
     font-weight: bold;
 }
 .project-analysis .in-text-link, .about-bio .in-text-link{
-    color: #ECB365;
+    color: #41797C;
     transition: .6s all ease-in-out;
 }
 
@@ -410,7 +401,11 @@ footer{
     color: #242424;
     margin-left: 2rem;
     margin-right: auto;
-    padding-top: 5rem;
+    padding-top: 6rem;
+}
+
+#overview{
+    padding-top: 5rem !important;
 }
 
 .text-container{
@@ -425,7 +420,7 @@ footer{
 }
 
 .research{
-    padding-top: 5rem;
+    padding-top: 1rem;
 }
 
 #graph88r{
@@ -474,6 +469,10 @@ footer{
     max-width: 50rem;
 }
 
+#left-project-quotes{
+    margin-left: 0rem !important;
+}
+
 .project-quotes p{
     margin-top: 0rem;
     margin-bottom: 1.6rem;
@@ -500,23 +499,6 @@ footer{
 
 .project-banner .project-description{
     padding: .5rem 0rem .5rem 0rem;
-}
-
-.more-project{
-    color: white; 
-    margin-top: 3rem;
-}
-
-.more-project .separating-line{
-    max-width: 50rem;
-    margin-left: auto;
-    margin-right: auto;
-    border-top: #108b8f 3px solid;
-}
-
-.more-project h3{   
-    color: #ECB365; 
-    text-align: center;
 }
 
 .project-details h3 {
@@ -548,7 +530,8 @@ footer{
 .caption-analysis{
     font-style: italic;
     padding-top: .5rem;
-    font-size: .8rem;
+    margin: 0rem !important;
+    font-size: .8rem !important;
     text-align: center;
 }
 
@@ -636,8 +619,11 @@ span{
 
 .project-card-2c{
     grid-template-columns: 1fr 1fr;
-    /* margin-left: auto;
-    margin-right: auto; */
+}
+
+.about-page{
+    background-color: #161616 !important;
+    color: #F5F8FD !important;
 }
 
 .about-me-2c{
