--- a/css/main_work.css
+++ b/css/main_work.css
@@ -52,12 +52,6 @@ p, ul, ol, a, figcaption{
     color: #242424;
 }
 
-main {
-    margin: 1rem;
-    padding: 1rem 3rem 1rem 3rem;  
-}
-
-
 /* nav items and main banner */
 nav {
     z-index: 10;
@@ -122,11 +116,6 @@ img.nav-item {
     margin-top: 1rem;
 }
 
-.main-banner h4{
-    margin-top: 8rem;
-    margin-bottom: 0.6rem;
-}
-
 #hero-video video{
     margin-top: 1rem;
     object-fit: cover;
@@ -164,7 +153,6 @@ body {
 /* Project items */
 
 .featured-project{
-    padding: 2rem;
     color: #242424;
     border-radius: 2rem;
     transition: transform 0.5s, opacity 0.5s;
@@ -290,7 +278,7 @@ footer{
 .label-button {
     text-align: center;
     display: inline;
-    color: #000000;
+    color: #242424;
     padding: .7rem .7rem;
     transition: 0.5s all ease-in-out;
     font-size: 1rem;
@@ -302,7 +290,7 @@ footer{
   }
   
 .label-button:hover, .label-button:focus {
-    color: #041C32;
+    color: #242424;
     box-shadow: inset 20rem 0 0 0 #ECB365;
 }
 
@@ -324,9 +312,7 @@ footer{
 
 .project-analysis{
     color: #242424;
-    margin-left: 2rem;
     margin-right: auto;
-    padding-top: 6rem;
 }
 
 #overview{
@@ -339,17 +325,11 @@ footer{
 
 .right-align-container{
     position: relative;
-    left: 55%;
-    max-width: 44rem;
     z-index: 2;
 }
 
 .research{
     padding-top: 1rem;
-}
-
-#graph88r{
-    margin-top: -5rem;
 }
 
 .project-analysis p, .project-description{
@@ -359,6 +339,10 @@ footer{
 .project-analysis p{
     margin: 1.5rem 0 1.5rem 0;
     font-size: .95rem;
+}
+
+.two-col-bottomnav-grid{
+    grid-template-columns: 1fr 1fr;
 }
 
 .responsive-img{
@@ -388,8 +372,6 @@ footer{
 }
 
 .project-quotes{
-    margin-left: 1rem; 
-    padding: 1.5rem 0rem 1.5rem 4rem;
     border-left: #41797C .1rem solid;
     max-width: 50rem;
 }
@@ -516,8 +498,8 @@ footer{
 }
 
 .add-gutters {
-    grid-column-gap: 4rem;
-    grid-row-gap: 1.2rem;
+    column-gap: 4rem;
+    row-gap: 1.2rem;
 }
 
 .featured-project, .project-banner {
@@ -528,7 +510,7 @@ footer{
 .project-roles{
     align-items: normal;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 2rem;
+    column-gap: 2rem;
     max-width: 60rem;
     margin: auto;
 }
@@ -568,14 +550,27 @@ span{
 /* 320px */
 @media (min-width: 20rem){
 
-
     /* Re add img and remove video later  */
      video{
         display: none;
     } 
 
+    .project-description{
+        margin: 0;
+        padding-top: 0rem ;
+    }
+    
+    .selected-works{
+        grid-template-columns: 1fr 1fr;
+    }
+
+    main{
+        padding: 0;
+        margin: 2rem;
+    }
+
     #Featured_Project h2{
-        font-size: 1.4rem;
+        font-size: .5rem;
     }
 
     .nav-grid-text{
@@ -584,6 +579,11 @@ span{
 
     .nav-grid-text .nav-item{
         text-decoration: underline;
+    }
+
+    .main-banner h4{
+        margin-top: 3rem;
+        margin-bottom: 0.4rem;
     }
 
     .project-banner img{
@@ -604,7 +604,7 @@ span{
     .nav-grid-master {
         justify-items:center;
         grid-template-columns: 1fr;
-        grid-row-gap: 1.2rem;
+        row-gap: 1.2rem;
     }
 
     nav{
@@ -612,8 +612,8 @@ span{
     }
     
     .main-banner h1{
-        margin-top: .5rem;
-        font-size: 2rem;
+        margin-top: .25rem;
+        font-size: 1.15rem;
         margin-bottom: 0;
     }
 
@@ -642,7 +642,7 @@ span{
 
     .project-card-2c{
         grid-template-columns: 1fr;
-        grid-row-gap: 0;
+        row-gap: 0;
     }
 
     .project-card-2c .project-details{
@@ -660,7 +660,7 @@ span{
     }
 
     .project-type{
-        font-size: .8rem;
+        font-size: .6rem;
     }
 
     .project-details h3{
@@ -704,6 +704,24 @@ span{
 
 @media (min-width: 37.5rem){
 
+    main {
+        margin: 1rem;
+        padding: 1rem 3rem 1rem 3rem;  
+    }
+
+    .right-align-container{
+        left: 0%;
+    }
+
+    .main-banner h4{
+        margin-top: 4rem;
+        margin-bottom: 0.5rem;
+    }
+
+    .project-roles{
+        column-gap: 1rem;
+    }
+
     .project-type{
         font-size: .7rem;
     }
@@ -726,7 +744,7 @@ span{
     }
 
     .featured-project{
-        padding: 2rem;
+        padding: 2rem 0rem;
     }
 
     .label-button{
@@ -746,6 +764,39 @@ span{
 
 /* 768px */
 @media (min-width: 48rem){
+
+    .main-banner h4{
+        margin-top: 8rem;
+        margin-bottom: 0.6rem;
+    }
+
+    .project-header{
+        padding: 1rem 4rem 0rem 4rem;
+        margin: auto;
+    }
+
+    .project-quotes{
+        margin-top: 4rem;
+        margin-left: 0rem; 
+        padding: 0.5rem 0rem 0.5rem 2rem;
+    }
+
+    .project-quotes h4{
+        font-size: 1.1rem;
+    }
+
+    .project-analysis{
+        margin-left: 0rem;
+        padding-top: 6rem;
+    }
+
+    #graph88r{
+        margin-top: 2rem;
+    }
+
+    #overview{
+        padding-top: 2rem !important;
+    }
 
     video{
         display: block;
@@ -817,7 +868,7 @@ span{
 
     .project-card-2c{
         grid-template-columns: 1fr 1fr;
-        grid-column-gap: 1.5rem;
+        column-gap: 1.5rem;
     }
 
     .project-card-2c .project-details{
@@ -850,13 +901,49 @@ span{
         font-size: 1rem;
     }
 
-    .two-col-project-grid, .selected-works{
+    .two-col-index-grid, .selected-works{
         grid-template-columns: 1fr 1fr;
+    }
+
+    .two-col-project-grid{
+        grid-template-columns: 1fr;
     }
 }
 
 /* 1024 px  */
 @media (min-width: 64rem){
+
+    #Featured_Project h2{
+        font-size: .75rem;
+    }
+
+    #graph88r{
+        margin-top: -5rem;
+    }
+
+    .project-quotes{
+        margin-top: 0rem;
+        margin-left: 1rem; 
+        padding: 1.5rem 0rem 1.5rem 4rem;
+    }
+
+    .project-analysis{
+        margin-left: 2rem;
+        padding-top: 6rem;
+    }
+
+    .project-roles{
+        column-gap: 2rem;
+    }
+
+    .two-col-project-grid{
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .right-align-container{
+        left: 55%;
+        max-width: 35rem;
+    }
 
     .footer-msg{
         max-width: 20rem;
@@ -874,9 +961,8 @@ span{
         max-height: fit-content;
     }
 
-    #Featured_Project h2{
-        font-size: .75rem;
-        font-weight: 400;
+    .featured-project{
+        padding: 2rem;
     }
 
     .text-box{
@@ -900,7 +986,6 @@ span{
 
     .project-header{
         padding: 2rem 6rem 0rem 6rem;
-        margin: auto;
     }
 
     .project-header h1{
@@ -919,20 +1004,6 @@ span{
     .project-description{
         max-width: 28rem;
     }       
-
-    #second-project p{
-        max-width: 26rem;
-    }
-
-    #second-project .project-details {
-        margin-left: 0;
-        margin-right: 8rem;
-        padding-left: 4rem;
-    }
-
-    #second-project .project-description{
-        margin-left: 0;
-    }
 
     .project-card-2c .project-details{
         margin: 1rem 2rem 2rem 0rem;
