--- a/css/main_work.css
+++ b/css/main_work.css
@@ -1103,6 +1103,15 @@ span{
         max-height: 40rem;
     }
 
+
+    .project-roles p{
+        font-size: 1.1rem;
+    }
+
+    .proejct-roles h3{
+        font-size: 1.3rem;
+    }
+
     .project-header h1{
         font-size: 1.75rem;
         max-width: 50rem;
@@ -1113,7 +1122,7 @@ span{
     }
 
     .project-analysis h2{
-        font-size: 1.6rem;
+        font-size: 1.75rem;
     }
 
     .project-analysis h3{
@@ -1122,10 +1131,14 @@ span{
 
     .project-analysis p{
         font-size: 1.25rem;
-        line-height: 2rem;
+        line-height: 2.25rem;
     }
 
     .text-container {
+        max-width: 65rem;
+    }
+
+    .project-quotes {
         max-width: 65rem;
     }
 
@@ -1135,9 +1148,14 @@ span{
         margin-bottom: 1rem;
     }
 
+    .project-quotes h5{
+        font-size: 1.4rem;
+        line-height: 2.2rem;
+    }
+
     .right-align-container{
         left: 53%;
-        max-width: 40rem;
+        max-width: 50rem;
     }
 
     .about-bio{
