--- a/css/main_work.css
+++ b/css/main_work.css
@@ -784,6 +784,13 @@ span{
         padding: 1rem 3rem 1rem 3rem;  
     }
 
+    #rising-banner{
+        padding: 4.2rem 0 0 0;
+        margin: 0;
+        object-fit: fill;
+        max-width: 100%;
+    }
+
     .project-header h1{
         font-size: 1.5rem;
     }
